# drawcula

./: .gitignore  CMakeLists.txt  CMakeLists_linux.txt  CMakeSettings.json  Dockerfile  DockerfileAlpine  LICENSE  README.md  Todo's  config.yml
.github/workflows/: push.yml
engines/: drawcula2
include/: board.h  castling.h  color.h  console.h  consolecolor.h  consoleutils.h  evaluation.h  feninfo.h  fenreader.h  flag.h  game.h  magicmoves.h  main.h  move.h  movegen.h  moveinfo.h  movelist.h  perft.h  piece.h  position.h  search.h  square.h  stringutils.h  uci.h  utils.h  version.h  zobrist.h
include/position/: epd.h  fen.h  position.h
include/reader/: epdreader.h  fenreader.h  readutils.h
src/: board.cpp  console.cpp  consoleutils.cpp  evaluation.cpp  feninfo.cpp  fenreader.cpp  game.cpp  magicmoves.cpp  main.cpp  move.cpp  movegen.cpp  moveinfo.cpp  movelist.cpp  perft.cpp  piece.cpp  position.cpp  search.cpp  square.cpp  stringutils.cpp  uci.cpp  utils.cpp  zobrist.cpp
src/position/: epd.cpp  fen.cpp  position.cpp
src/reader/: epdreader.cpp  fenreader.cpp  readutils.cpp
test/: branching_factor.cpp  main.cpp  matepositions.cpp  perft_complexpositions.cpp  perft_startposition.cpp  play_game.cpp  positions_bug.cpp  positions_mate.cpp  positions_stalemate.cpp  stalematepositions.cpp  win_at_chess.cpp
